tests/ui/parser/issues/issue-51602.stderr
error: expected `{`, found keyword `in`
  --> $DIR/issue-51602.rs:2:10
   |
LL |     if i in 1..10 {
   |          ^^ expected `{`
   |
note: the `if` expression is missing a block after this condition
  --> $DIR/issue-51602.rs:2:8
   |
LL |     if i in 1..10 {
   |        ^

error: aborting due to 1 previous error

